0.8.0/_sources/gettingstarted/examples/gallery/auto_examples_processing/denoising/plot_denoising.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/denoising/plot_denoising.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py:


Denoising a 2D Raman spectrum
=============================

In this example, we use the `denoise` method to remove the noise from a 2D Raman
spectrum.

.. GENERATED FROM PYTHON SOURCE LINES 17-18

Import spectrochempy

.. GENERATED FROM PYTHON SOURCE LINES 18-23

.. code-block:: Python


    import spectrochempy as scp

    scp.set_loglevel("INFO")  # to see information








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Load the data (should be a 2D spectrum or a list of datasets that can be merged):

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: Python


    dataset = scp.read("ramandata/labspec/serie190214-1.txt")








.. GENERATED FROM PYTHON SOURCE LINES 29-30

select the useful region

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: Python


    nd = dataset[:, 60.0:]








.. GENERATED FROM PYTHON SOURCE LINES 34-35

Basic plot

.. GENERATED FROM PYTHON SOURCE LINES 35-37

.. code-block:: Python


    nd.plot(title="original data")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_001.png
   :alt: original data
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 38-39

Detrend the data (for a easier comparison)

.. GENERATED FROM PYTHON SOURCE LINES 39-42

.. code-block:: Python


    nd1 = nd.detrend(title="detrended data")
    nd1.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_002.png
   :alt: plot denoising
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 43-45

Denoise the data using the `denoise` method with the default parameters
i.e., ratio=99.8

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: Python

    nd2 = nd1.denoise()
    nd2.plot(title="denoised data")



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_003.png
   :alt: denoised data
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_003.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 48-49

Denoise the data using a different ratio

.. GENERATED FROM PYTHON SOURCE LINES 49-55

.. code-block:: Python

    nd3 = nd1.denoise(ratio=95)
    nd3.plot(title="denoised data")

    nd4 = nd1.denoise(ratio=90)
    nd4.plot(title="denoised data")




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_004.png
         :alt: denoised data
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_005.png
         :alt: denoised data
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/denoising/images/sphx_glr_plot_denoising_005.png
         :class: sphx-glr-multi-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 57-60

This example shows that denoising can be used effectively on such spectra to increase the signal-to-noise ratio.
However, it apparently has a poor effect on eliminating cosmic ray peaks.
For the latter, it may be useful to use `despike` methods as seen in another example.

.. GENERATED FROM PYTHON SOURCE LINES 62-65

This ends the basic example of denoising a 2D Raman spectrum.
scp.show()  # uncomment to show plot if running from a script
sphinx_gallery_thumbnail_number = -1


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.241 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_denoising_plot_denoising.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_denoising.ipynb <plot_denoising.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_denoising.py <plot_denoising.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_denoising.zip <plot_denoising.zip>`
